--- a/sass/_elements.sass
+++ b/sass/_elements.sass
@@ -81,7 +81,7 @@ header
 			float: left
 			text-align: center
 			a
-				display: inline-block
+				display: block
 				padding: 1.8em 2.063em
 				&:hover
 					@extend .red_bg
